test/spec_vectors/local_set/fail/module_29.wat
(module (func $large-local (local i32 i64) (local.set 14324343 (i32.const 0))))